--- a/style.css
+++ b/style.css
@@ -1,58 +1,51 @@
 * {
+  box-sizing: border-box;
   margin: 0;
 }
-#logo {
-  margin-top: 5px;
-  height: 40px;
-  float:left;
+body {
+  font-family: Arial, Helvetica;
+  background-color: beige; 
+  background-image: url('background image.jpg');
+  background-position: center;
+  margin: 0;
+}
+.header {
+  padding: 30px;
+  border: 1px solid;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  background-color: Aquamarine;
+  line-height: 50px;
+  font-family: Lucida Sans Unicode ;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+  color: Blue;
+}
+section {
+  padding-top: 200px;
+  min-height: 800px;
 }
 #article-list {
-  /*margin: 20px 250px;*/
   width: 800px;
   border: 1px solid;
   background-color: white;
   margin: auto;
 }
-body {
-  background-color: grey;
-}
-header {
-  border: 1px solid;
-  position: fixed;
-  width: 100%;
-  height: 50px;
-  background-color: white;
-  z-index: 999;
-  line-height: 50px;
-}
-nav {
-  float: right;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-ul li {
-  display: inline;
-}
+
 h1 {
   text-align: center;
   color: black;
-  font-family: Slabo;
+  font-family: Tahoma;
   font-size: 50px;
   margin-bottom: 20px;
 }
 article h3 {
   margin-bottom: 20px;
 }
-section {
-  padding-top: 80px;
-  min-height: 800px;
-}
+
 article {
   border-bottom: 2px solid;
   padding: 20px;
@@ -61,9 +54,9 @@ article:last-child {
   border-bottom: 0px;
 }
 footer {
-  text-align: center;
-  height: 70px;
+  text-align: left;
+  height: 50px;
   color: white;
-  background-color: black;
-  line-height: 70px;
+  background-color: Grey;
+  line-height: 50px;
 }
