--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+﻿* {
   box-sizing: border-box;
   margin: 0;
 }
@@ -30,7 +30,7 @@ section {
 }
 #article-list {
   width: 800px;
-  border: 1px solid;
+  border-radius: 1px solid;
   background-color: white;
   margin: auto;
 }
