--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ section {
 }
 #article-list {
   width: 800px;
-  border-radius: 20px solid;
+  border: 1px solid;
   background-color: white;
   margin: auto;
 }
